--- a/app/src/main/res/drawable/edittext_background.xml
+++ b/app/src/main/res/drawable/edittext_background.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="#D7D6D7"/>
+        <solid android:color="#FFFFFF"/>
         <corners android:radius="10dp"/>
-        <stroke android:color="@color/blue" android:width="1dp"/>
+        <stroke android:color="@color/blue" android:width="3dp"/>
 
     </shape>
 </item>
