--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -171,16 +171,16 @@
                     android:text="VND"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/Voucher"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                android:text="Voucher"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="18sp"-->
-<!--                android:textStyle="bold" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/Voucher"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:layout_marginBottom="8dp"-->
+            <!--                android:text="Voucher"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                android:textSize="18sp"-->
+            <!--                android:textStyle="bold" />-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:background="@color/white"
@@ -229,24 +229,38 @@
                         />
                     <LinearLayout
                         android:visibility="gone"
-                        android:id="@+id/idlr"
+                        android:id="@+id/idlr_gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
+                            android:id="@+id/txtName_TT"
                             android:layout_marginTop="8dp"
                             android:textStyle="italic"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Address: "/>
+                            android:textColor="@color/black"
+                            android:text="Name: "/>
                         <TextView
+                            android:id="@+id/txtAddress_TT"
                             android:layout_marginTop="8dp"
                             android:textStyle="italic"
+                            android:textColor="@color/black"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Address: "/>
+                        <TextView
+                            android:id="@+id/txtPhone_TT"
+                            android:layout_marginTop="8dp"
+                            android:textStyle="italic"
+                            android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Phone: "/>
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/lraddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -286,8 +300,7 @@
                     android:id="@+id/txtB"
                     android:text="Payment Method"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toStartOf="@id/view2"
-                    app:layout_constraintTop_toBottomOf="@id/view2"/>
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
