--- a/doan/src/Famework/chat/index.scss
+++ b/doan/src/Famework/chat/index.scss
@@ -1,9 +1,9 @@
 .chat-container {
     display: flex;
-    height: 100vh;
-    max-width: 800px;
+    height: 90vh;
+    max-width: 100%;
     margin: auto;
-    border: 1px solid #ccc;
+   
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -13,7 +13,7 @@
       background-color: #f5f5f5;
       border-right: 1px solid #ddd;
       padding: 10px;
-  
+      overflow: auto;
       h3 {
         text-align: center;
         margin-bottom: 10px;
@@ -44,7 +44,7 @@
   
       .chat-header {
         padding: 10px;
-        background-color: #0078ff;
+       
         color: white;
         text-align: center;
         font-size: 18px;
