--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,15 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_Cart">
 
-    <ImageView
-        android:id="@+id/imgBack_cart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -25,22 +16,23 @@
         app:layout_constraintGuide_begin="3dp" />
 
 
+    <!-- RecyclerView -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="120dp"
         android:text="Giỏ hàng"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgBack_cart"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_cart"
         android:layout_width="0dp"
