--- a/app/src/main/res/layout/activity_yeu_thich.xml
+++ b/app/src/main/res/layout/activity_yeu_thich.xml
@@ -6,31 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_YeuThich"
-    android:layout_marginTop="30dp"
     >
 
-    <ImageView
-        android:id="@+id/imgBack_YT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="30dp"
+        android:layout_marginRight="120dp"
         android:text="Yêu thích"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgBack_YT"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
